--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mysql:
     image: mysql:8.0
-    container_name: concurso_mysql
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -23,7 +23,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin:latest
-    container_name: concurso_phpmyadmin
+    container_name: phpmyadmin
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
@@ -41,7 +41,7 @@ services:
     build: 
       context: ./backend/estudaia
       dockerfile: Dockerfile
-    container_name: concurso_backend
+    container_name: backend
     ports:
       - "8080:8080"  # Backend na porta 8080
     environment:
@@ -49,6 +49,7 @@ services:
       SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
+      API_KEY: ${API_KEY}
     depends_on:
       mysql:
         condition: service_healthy
